--- a/04_Randomizer/index.html
+++ b/04_Randomizer/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Randomizer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <div class="content">
      <h1>Randomizer</h1>
-     <label class="label-text-content" for="value-min">min</label>
-     <input class="input-text-content" id="value-min" type="text" >
+     <label class="label-text-content" for="value-min">MIN value:</label>
+     <input class="input-text-content" id="value-min" type="number" placeholder="Input min:">
      <p></p>
-     <label class="label-text-content" for="value-max">max</label>
-     <input class="input-text-content" id="value-max" type="text" >
-     <p></p>
+     <label class="label-text-content" for="value-max">MAX value:</label>
+     <input class="input-text-content" id="value-max" type="number" placeholder="Input max:">
+     <p class="label-text-content"></p>
      <input class="input-button-content"   type="button" value="Generate">
-     <p class="label-text-content">Generate number: <label class="label-text-content value-result">0</label></p>
+     <p class="label-text-content-result">Generate number: <label class="label-text-content-result value-result">0</label></p>
      <input class="input-button-content" type="button" value="Reset">
  </div>
+<script src="script.js"></script>
 </body>
 </html>
