--- a/04_Randomizer/index.html
+++ b/04_Randomizer/index.html
@@ -14,9 +14,9 @@
      <label class="label-text-content" for="value-max">MAX value:</label>
      <input class="input-text-content" id="value-max" type="number" placeholder="Input max:">
      <p class="label-text-content"></p>
-     <input class="input-button-content"   type="button" value="Generate">
-     <p class="label-text-content-result">Generate number: <label class="label-text-content-result value-result">0</label></p>
-     <input class="input-button-content" type="button" value="Reset">
+     <input class="input-button-content button-generate"   type="button" value="Generate" onclick="validateRangeValue()">
+     <p class="label-text-content-result">Generate number: <label class="label-text-content-result value-result"> </label></p>
+     <input class="input-button-content" type="button" value="Reset" onclick="resetRandom()">
  </div>
 <script src="script.js"></script>
 </body>
