--- a/05_CSS_intro/Randomizer/src/index.html
+++ b/05_CSS_intro/Randomizer/src/index.html
@@ -7,17 +7,15 @@
 </head>
 <body>
  <div class="container">
-     <div class="container__body">
      <h1 class="unselectable">Randomizer</h1>
      <label class="container__text unselectable" for="value-min">MIN </label>
-     <input class="container__input" id="value-min" type="number" placeholder="Input min">
+     <input class="container__input--number" id="value-min" type="number" placeholder="Input min">
      <label class="container__text unselectable" for="value-max">MAX </label>
-     <input class="container__input" id="value-max" type="number" placeholder="Input max">
+     <input class="container__input--number" id="value-max" type="number" placeholder="Input max">
      <p class="container__text unselectable"></p>
-     <input class="container__input button-generate"   type="button" value="Generate" onclick="validateRangeValue()">
+     <input class="container__input--button button-generate"   type="button" value="Generate" onclick="validateRangeValue()">
      <p class="container__text unselectable">Generate number: <label class="container__text value-result"> </label></p>
-     <input class="container__input" type="button" value="Reset" onclick="resetRandom()">
- </div>
+     <input class="container__input--button" type="button" value="Reset" onclick="resetRandom()">
  </div>
 <script src="script.js"></script>
 </body>
