--- a/03_Guess_Number/src/html/index.html
+++ b/03_Guess_Number/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Угадай число</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -17,17 +17,17 @@
         <p>Выберите количество попыток:</p>
         <input class="numberData" id="numberOfAttempts" type="number" value="5" min="1" max="15">
         <p id="hintNumberData"> </p>
-        <input type="button" value="Сохранить" onclick="eventHandlerSaveClick()">
+        <input type="button" value="Сохранить" id="save">
     </div>
     <div class="inputData">
         <p>Привет, я загадал число от <label id="valueRangeFrom">1</label> до <label id="valueRangeUpDo">100</label> вашего диапазона.
             Попробуй угадать его за <label id="valueNumberOfAttempts">5</label> попыток!</p>
         <input type="text" id="inputValue">
-        <input type="button" value="Ок" onclick="eventHandlerClick()">
+        <input type="button" value="Ок" id="play">
         <p id="hintText"></p>
-        <input type="button" value="Выход" onclick="eventHandlerSaveClick()">
+        <input type="button" value="Выход" id="end_game">
     </div>
 </div>
-<script src="index.js"></script>
+<script src="./js/index.js" ></script>
 </body>
 </html>
