--- a/04_Randomizer/src/html/index.html
+++ b/04_Randomizer/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Randomizer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
  <div class="content">
@@ -18,6 +18,6 @@
      <p class="label-text-content-result">Generate number: <label class="label-text-content-result value-result"> </label></p>
      <input class="input-button-content" type="button" value="Reset" onclick="resetRandom()">
  </div>
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
