--- a/05_CSS_intro/Guess_Number/src/html/index.html
+++ b/05_CSS_intro/Guess_Number/src/html/index.html
@@ -32,9 +32,12 @@
         <input class="container__input" type="text" id="inputValue">
         <input class="container__input container__input--button" type="button" value="Ок" id="play">
         <p class="container__text" id="hintText"></p>
-        <input class="container__input container__input--button" type="button" value="Выход"  id="end_game">
+        <div id="sparkler">
+            <input class="container__input container__input--button" type="button" value="Выход"  id="end_game">
+        </div>
     </section>
 </menu>
+
 <script src="./js/index.js" ></script>
 </body>
 </html>
