--- a/05_CSS_intro/Randomizer/src/html/index.html
+++ b/05_CSS_intro/Randomizer/src/html/index.html
@@ -17,6 +17,7 @@
      <p class="container__text unselectable">Generate number: <label class="container__text" id="value_result"> </label></p>
      <input class="container__input--button" type="button" value="Reset" id="reset">
  </div>
+ <div class="object"></div>
 <script src="./js/index.js"></script>
 </body>
 </html>
